[workspace]

members = [
    "tunshell-shared",
    "tunshell-client",
    "tunshell-server",
    "tunshell-tests",
]

[workspace.dependencies]
anyhow = "1.0.31"
env_logger = "0.7.1"
futures = "0.3.5"
log = "0.4.8"
rand = "0.7.3"
serde = "1.0.114"
serde_json = "1.0.55"
tokio = { version = "0.2.21", features = [
    "blocking",
    "time",
    "io-util",
    "macros",
] }
tokio-rustls = { version = "0.14.0", features = ["dangerous_configuration"] }
tokio-util = { version = "0.3.1", features = ["compat"] }
webpki = "0.21.3"
webpki-roots = "0.20.0"
lazy_static = "1.4.0"
