[workspace]

members = [
    "tunshell-shared",
    "tunshell-client",
    "tunshell-server",
    "tunshell-tests",
]

[workspace.dependencies]
anyhow = "1"
env_logger = "0.11.5"
futures = "0.3.30"
log = "0.4.22"
rand = "0.8.5"
serde = "1"
serde_json = "1"
tokio = { version = "1.40.0", features = ["time", "io-util", "macros"] }
tokio-rustls = { version = "0.24.1" }
tokio-util = { version = "0.7.12", features = ["compat"] }
webpki = "0.22.4"
webpki-roots = "0.26.6"
lazy_static = "1.4.0"
