[package]
name = "tunshell-client"
version = "0.1.0"
authors = ["Elliot Levin <elliotlevin@hotmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tunshell-shared = { path = "../tunshell-shared" }
anyhow = { workspace = true }
async-trait = "0.1.33"
byteorder = "1.3.4"
cfg-if = "0.1.10"
env_logger = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
native-tls = { version = "0.2.4", optional = true }
openssl = { version = "0.10.30", features = ["vendored"], optional = true }
rand = { workspace = true }
ring = { version = "0.16.15", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "1.0.19"
tokio-native-tls = { version = "0.1.0", optional = true }
tokio-rustls = { workspace = true, optional = true }
tokio-util = { workspace = true }
twox-hash = "1.5.0"
webpki = { workspace = true, optional = true }
webpki-roots = { workspace = true, optional = true }

[features]
default = ["use-rustls"]
use-rustls = ["ring", "webpki", "webpki-roots", "tokio-rustls"]
use-native-tls = ["native-tls", "tokio-native-tls", "openssl"]

[target.'cfg(all(not(target_os = "ios"), not(target_os = "android"), not(target_arch = "wasm32")))'.dependencies]
portable-pty = "0.3.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-tungstenite = { version = "0.8.0", features = ["tokio-runtime"] } #no-wasm
crossterm = { version = "0.23.2" }
libc = "0.2.71"
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "io-std",
    "io-util",
    "net",
    "sync",
    "process",
    "signal",
    "fs",
] } #no-wasm

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
getrandom = { version = "0.2.6", features = ["js"] }
js-sys = "0.3.44"
tokio = { workspace = true, features = ["sync"] }
wasm-bindgen = "0.2.65"
wasm-bindgen-futures = "0.4.15"
wee_alloc = "0.4.5"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.42"
features = [
    "console",
    "Crypto",
    "SubtleCrypto",
    "CryptoKey",
    "Pbkdf2Params",
    "AesDerivedKeyParams",
    "AesGcmParams",
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "FileReader",
    "MessageEvent",
    "ProgressEvent",
    "WebSocket",
]

[target.'cfg(unix)'.dependencies]
remote-pty-common = { git = "https://github.com/TimeToogo/remote-pty" }
remote-pty-master = { git = "https://github.com/TimeToogo/remote-pty" }

[dev-dependencies]
lazy_static = { workspace = true }
