[package]
name = "tunshell-server"
version = "0.1.0"
authors = ["Elliot Levin <elliotlevin@hotmail.com>"]
edition = "2018"

[dependencies]
tunshell-shared = { path = "../tunshell-shared" }
anyhow = { workspace = true }
chrono = "0.4.13"
env_logger = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rustls = "0.18.0"
rusqlite = { version = "0.23.1", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-threaded", "tcp", "udp"] }
tokio-rustls = { workspace = true }
tokio-util = { workspace = true }
uuid = { version = "0.8.1", features = ["v4"] }
warp = { version = "0.2.3", features = ["tls"] }
webpki = { workspace = true }
webpki-roots = { workspace = true }

[dev-dependencies]
async-tls = "0.9.0"
async-tungstenite = { version = "0.8.0", features = [
    "async-tls",
    "tokio-runtime",
] }
lazy_static = { workspace = true }
tungstenite = "0.11.0"
