[package]
name = "tunshell-shared"
version = "0.1.0"
authors = ["Elliot Levin <elliotlevin@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[target.'cfg(fuzzing)'.dependencies]
afl = "0.8.0"

[dev-dependencies]
futures-test = "0.3.5"
